--- a/index.html
+++ b/index.html
@@ -4,19 +4,36 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 	<title>Examen Herramientas Productividad</title>
+	<link rel="stylesheet icon" href="favicon.ico">
+	<link rel="stylesheet" href="src/css/font-awesome.css">	
 	<link rel="stylesheet" href="src/css/bootstrap.min.css">
 	<!--REQUIRED STYLE SHEETS-->
 	<link rel="stylesheet" href="src/css/style.css">
 	<link rel="stylesheet" href="src/css/queries.css">
 </head>
 <body>
-	<div class="navbar navbar-inverse navbar-fixed-top">
-		<div class="container">		    
+	<div class="navbar navbar-inverse navbar-fixed-top" id="nav-menu">
+		<div class="container">	               
+            <div class="row">
+		        <div class="col-xs-6" id="nav-logo">
+		            <img src="src/img/img-docs/logo-gris.jpg" alt="logo-encabezado" class="img-responsive">
+		        </div>
+		        <div class="col-xs-6 text-right" id="nav-info">
+		            <i class="fa fa-info-circle" aria-hidden="true"></i>    
+		        </div>
+            </div>	    
 		</div>
 	</div><!--END NAV SECTION -->
 	<div id="home-sec">   
-		<div class="container"  >
-		    
+		<div class="container">
+            <div id="seleccionar-ruta">
+                <!--<select>
+                  <option value="volvo">Seleccione</option>
+                  <option value="saab">Saab</option>
+                  <option value="opel">Opel</option>
+                  <option value="audi">Audi</option>
+                </select>-->    
+            </div>		        
 		</div>
 	</div><!--END HOME SECTION-->  
 	<section id="info"  >
