menu nav con estilos

--- a/index.html
+++ b/index.html
@@ -9,17 +9,24 @@
 	<link rel="stylesheet" href="src/css/bootstrap.min.css">
 	<!--REQUIRED STYLE SHEETS-->
 	<link rel="stylesheet" href="src/css/style.css">
-	<link rel="stylesheet" href="src/css/queries.css">
+	<link rel="stylesheet" href="src/css/queries/queries.css">
 </head>
 <body>
-	<div class="navbar navbar-inverse navbar-fixed-top" id="nav-menu">
+	<div class="" id="nav-menu">
 		<div class="container">	               
             <div class="row">
 		        <div class="col-xs-6" id="nav-logo">
-		            <img src="src/img/img-docs/logo-gris.jpg" alt="logo-encabezado" class="img-responsive">
+                    <h2>
+                        <img src="src/img/img-docs/logo-gris.jpg" alt="logo-encabezado" class="img-responsive" width="200px">
+                    </h2>
+		            
 		        </div>
 		        <div class="col-xs-6 text-right" id="nav-info">
-		            <i class="fa fa-info-circle" aria-hidden="true"></i>    
+                    <div id="box-icon">
+                        <h2>
+                            <i class="fa fa-info-circle" aria-hidden="true"></i>
+                        </h2>                            
+                    </div>		                
 		        </div>
             </div>	    
 		</div>
@@ -27,12 +34,36 @@
 	<div id="home-sec">   
 		<div class="container">
             <div id="seleccionar-ruta">
-                <!--<select>
+                <h4>ORIGEN</h4>
+                <select>
                   <option value="volvo">Seleccione</option>
-                  <option value="saab">Saab</option>
-                  <option value="opel">Opel</option>
-                  <option value="audi">Audi</option>
-                </select>-->    
+                  <option value="saab">Arica</option>
+                  <option value="opel">Iquique</option>
+                  <option value="audi">Antofagasta</option>
+                  <option value="audi">Calama</option>
+                  <option value="audi">La Serena</option>
+                  <option value="audi">Valparaiso</option>
+                  <option value="audi">Santiago</option>
+                  <option value="audi">Rancagua</option>
+                  <option value="audi">Talca</option>
+                  <option value="audi">Concepción</option>
+                  <option value="audi">Temuco</option>
+                </select>
+                <h4>DESTINO</h4>
+                <select>
+                  <option value="volvo">Seleccione</option>
+                  <option value="saab">Arica</option>
+                  <option value="opel">Iquique</option>
+                  <option value="audi">Antofagasta</option>
+                  <option value="audi">Calama</option>
+                  <option value="audi">La Serena</option>
+                  <option value="audi">Valparaiso</option>
+                  <option value="audi">Santiago</option>
+                  <option value="audi">Rancagua</option>
+                  <option value="audi">Talca</option>
+                  <option value="audi">Concepción</option>
+                  <option value="audi">Temuco</option>
+                </select>   
             </div>		        
 		</div>
 	</div><!--END HOME SECTION-->  
