maquetado de home origen-destino de la app

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<link rel="stylesheet" href="src/css/queries/queries.css">
 </head>
 <body>
-	<div class="" id="nav-menu">
+	<div class="navbar" id="nav-menu">
 		<div class="container">	               
             <div class="row">
 		        <div class="col-xs-6" id="nav-logo">
@@ -63,8 +63,9 @@
                   <option value="audi">Talca</option>
                   <option value="audi">Concepción</option>
                   <option value="audi">Temuco</option>
-                </select>   
-            </div>		        
+                </select>                   
+            </div>	      
+            <p><button class="hidden" id="btn-buscar">buscar</button></p>      	        
 		</div>
 	</div><!--END HOME SECTION-->  
 	<section id="info"  >
@@ -79,5 +80,6 @@
 	<div id="footer">
 		2014 www.yourdomain.com | All Right Reserved  
 	</div><!-- END FOOTER SECTION -->
+	<script src="src/js/"></script>
 </body>
 </html>
