--- a/index.html
+++ b/index.html
@@ -68,25 +68,25 @@
                     <td><input type="radio" name="medio-transporte"></td>
                     <td><img src="src/img/img-docs/moto.jpg" alt="moto" width="30px"></td>
                     <td><span><b>Motocicleta</b> <br><span>máximo 2 pasajeros</span></span></td>
-                    <td id="precio">#333</td>
+                    <td id="precioMotocicleta">#333</td>
                   </tr>
                   <tr>
                     <td><input type="radio" name="medio-transporte"></td>
                     <td><img src="src/img/img-docs/auto.jpg" alt="moto" width="30px"></td>
                     <td><span><b>Automóvil</b> <br><span>máximo 5 pasajeros</span></span></td>
-                    <td id="precio">#333</td>
+                    <td id="precioAutomovil">#333</td>
                   </tr>
                   <tr>
                     <td><input type="radio" name="medio-transporte"></td>
                     <td><img src="src/img/img-docs/van.jpg" alt="moto" width="30px"></td>
                     <td><span><b>Minivan</b> <br><span>máximo 10 pasajeros</span></span></td>
-                    <td id="precio">#333</td>
+                    <td id="precioMinivan">#333</td>
                   </tr>
                   <tr>
                     <td><input type="radio" name="medio-transporte"></td>
                     <td><img src="src/img/img-docs/camion.jpg" alt="moto" width="30px"></td>
-                    <td><span><b>Motocicleta</b> <br><span>máximo 3 pasajeros</span></span></td>
-                    <td id="precio">#333</td>
+                    <td><span><b>Camión</b> <br><span>máximo 3 pasajeros</span></span></td>
+                    <td id="precioCamion">#333</td>
                   </tr>              
                 </table> 
                 <p><b>Cantidad de pasajeros: </b> <input type="text" size="4"></p>
