--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 	</section><!--END ABOUT SECTION-->
 	<section id="calculator" >
 		<div class="container">
-            <div id="vehiculo">
+            <div class="collapse" id="vehiculo">
                 <h4>VEHÍCULO</h4>
                 <span>seleccione</span>
                 <br>
@@ -89,7 +89,7 @@
                     <td id="precioCamion">#333</td>
                   </tr>              
                 </table> 
-                <p><b>Cantidad de pasajeros: </b> <input type="text" size="4"></p>
+                <p><b>Cantidad de pasajeros: </b> <input type="text" size="4" id="cant-pasajeros"></p>
             </div>               
 		</div>
 	</section><!--END PROJECT SECTION-->
