test2 del funcionamiento de app

--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
 		<div class="container">
 		</div>
 	</section><!--END ABOUT SECTION-->
-	<section id="calculator" >
+	<section id="calculator" class="collapse">
 		<div class="container">
-            <div class="collapse" id="vehiculo">
+            <div id="vehiculo">
                 <h4>VEHÍCULO</h4>
                 <span>seleccione</span>
                 <br>
@@ -94,7 +94,10 @@
 		</div>
 	</section><!--END PROJECT SECTION-->
 	<div id="footer">
-		2014 www.yourdomain.com | All Right Reserved  
+
+            <p>2014 www.yourdomain.com | All Right Reserved </p>
+	    
+		 
 	</div><!-- END FOOTER SECTION -->
 	<script src="src/js/jquery.min.js"></script>
 	
