--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                     <td id="precioCamion">#333</td>
                   </tr>              
                 </table> 
-                <p><b>Cantidad de pasajeros: </b> <input type="text" size="4" id="cant-pasajeros"></p>
+                <p><b>Cantidad de pasajeros: </b> <input type="text" size="4" id="cant-pasajeros" onkeydown="validadCantidadPasajeros()"></p>
             </div>               
 		</div>
 	</section><!--END PROJECT SECTION-->
