--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
             </div>	    
 		</div>
 	</div><!--END NAV SECTION -->
+	<div id="map" style='height:100vh'></div>
 	<div id="home-sec">   
 		<div class="container">
             <div id="seleccionar-ruta">
@@ -58,7 +59,8 @@
 		</div>
 	</section><!--END ABOUT SECTION-->
 	<section id="calculator" class="">
-		<div class="container">
+	    <div id="contenido-calculator">
+	        <div class="container">
             <div id="vehiculo">
                 <h4>VEHÍCULO</h4>
                 <span>seleccione</span>
@@ -77,7 +79,7 @@
                     <td id="precioAutomovil">#333</td>
                   </tr>
                   <tr>
-                    <td><input type="radio" name="medio-transporte"></td>
+                    <td><input type="radio" name="medio-transporte" id="num-pasajeros"></td>
                     <td><img src="src/img/img-docs/van.jpg" alt="moto" width="30px"></td>
                     <td><span><b>Minivan</b> <br><span>máximo 10 pasajeros</span></span></td>
                     <td id="precioMinivan">#333</td>
@@ -90,18 +92,23 @@
                   </tr>              
                 </table> 
                 <p><b>Cantidad de pasajeros: </b> <input type="text" size="4" id="cant-pasajeros" onkeydown="validadCantidadPasajeros()"></p>
-            </div>               
-		</div>
-	</section><!--END PROJECT SECTION-->
+            </div>  
+            <p><button id="compartir-carro">compartir carro!</button></p>                         
+		</div>    
+	    </div>		
+	</section><!--END PROJECT SECTION-->	
 	<div id="footer">
 
             <p>2014 www.yourdomain.com | All Right Reserved </p>
 	    
 		 
 	</div><!-- END FOOTER SECTION -->
+	
 	<script src="src/js/jquery.min.js"></script>
 	
 	<script src="src/js/main.js"></script>
 	<script src="src/js/main2.js"></script>
+	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBPhRJfmJk39RODSk-cxJEIEvfg6fjAulw&callback=initMap"
+        async defer></script>
 </body>
 </html>
