boton mostar compartir carro hbilitado

--- a/index.html
+++ b/index.html
@@ -67,25 +67,25 @@
                 <br>
                 <table style="width:100%" class="text-center">
                   <tr>
-                    <td><input type="radio" name="medio-transporte"></td>
+                    <td><input type="radio" name="medio-transporte" value="motocicleta" id="motocicleta"></td>
                     <td><img src="src/img/img-docs/moto.jpg" alt="moto" width="30px"></td>
                     <td><span><b>Motocicleta</b> <br><span>máximo 2 pasajeros</span></span></td>
                     <td id="precioMotocicleta">#333</td>
                   </tr>
                   <tr>
-                    <td><input type="radio" name="medio-transporte"></td>
+                    <td><input type="radio" name="medio-transporte" value="automovil" id="automovil"></td>
                     <td><img src="src/img/img-docs/auto.jpg" alt="moto" width="30px"></td>
                     <td><span><b>Automóvil</b> <br><span>máximo 5 pasajeros</span></span></td>
                     <td id="precioAutomovil">#333</td>
                   </tr>
                   <tr>
-                    <td><input type="radio" name="medio-transporte" id="num-pasajeros"></td>
+                    <td><input type="radio" name="medio-transporte" id="num-pasajeros" value="minivan" id="minivan"></td>
                     <td><img src="src/img/img-docs/van.jpg" alt="moto" width="30px"></td>
                     <td><span><b>Minivan</b> <br><span>máximo 10 pasajeros</span></span></td>
                     <td id="precioMinivan">#333</td>
                   </tr>
                   <tr>
-                    <td><input type="radio" name="medio-transporte"></td>
+                    <td><input type="radio" name="medio-transporte" value="camion" id="camion"></td>
                     <td><img src="src/img/img-docs/camion.jpg" alt="moto" width="30px"></td>
                     <td><span><b>Camión</b> <br><span>máximo 3 pasajeros</span></span></td>
                     <td id="precioCamion">#333</td>
@@ -93,7 +93,7 @@
                 </table> 
                 <p><b>Cantidad de pasajeros: </b> <input type="text" size="4" id="cant-pasajeros" onkeydown="validadCantidadPasajeros()"></p>
             </div>  
-            <p><button id="compartir-carro">compartir carro!</button></p>                         
+            <p id="mostrarPU"><button id="compartir-carro">compartir carro!</button></p>                         
 		</div>    
 	    </div>		
 	</section><!--END PROJECT SECTION-->	
