--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                     <td id="precioAutomovil">#333</td>
                   </tr>
                   <tr>
-                    <td><input type="radio" name="medio-transporte" id="num-pasajeros" value="minivan" id="minivan"></td>
+                    <td><input type="radio" name="medio-transporte" value="minivan" id="minivan"></td>
                     <td><img src="src/img/img-docs/van.jpg" alt="moto" width="30px"></td>
                     <td><span><b>Minivan</b> <br><span>máximo 10 pasajeros</span></span></td>
                     <td id="precioMinivan">#333</td>
@@ -107,7 +107,6 @@
 	<script src="src/js/jquery.min.js"></script>
 	
 	<script src="src/js/main.js"></script>
-	<script src="src/js/main2.js"></script>
 	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBPhRJfmJk39RODSk-cxJEIEvfg6fjAulw&callback=initMap"
         async defer></script>
 </body>
